syntax = "proto3";

option csharp_namespace = "OpenMeteo";

package weather;

service Weather {
  rpc GetWeatherStream (WeatherRequest) returns (stream WeatherData);
}

message WeatherRequest {
}

message WeatherData {
  string dateTime = 1;
  string now = 2;
  double temperature = 3;
}